# LifeMaker

./: .gitignore  CMakeLists.txt  LifeMaker.pro  README.md  coverage.sh
examples/: CMakeLists.txt
src/: CMakeLists.txt
src/applications/: CMakeLists.txt  lifemaker.cpp  merge_elements.cpp
src/gui/: CMakeLists.txt  Controller.cpp  Controller.h  ElementUI.cpp  ElementUI.h  ElementUI.ui  MainWindow.cpp  MainWindow.h  mainwindow.ui
src/gui/tools/: Tools.cpp  Tools.h
src/lifemaker/: CMakeLists.txt
src/lifemaker/core/: Exception.cpp  Exception.h  LMController.cpp  LMController.h  Logger.cpp  Logger.h
src/lifemaker/objects/: Dictionary.cpp  Dictionary.h  Element.cpp  Element.h  Relation.cpp  Relation.h  Relations.cpp  Relations.h
src/lifemaker/tools/: StringTools.cpp  StringTools.h
tests/: CMakeLists.txt  run_tests.sh
tests/src/lifemaker/core/: Exception.cpp  LMController.cpp  Logger.cpp
tests/src/lifemaker/objects/: Dictionary.cpp  Element.cpp  Relation.cpp  Relations.cpp
tests/src/lifemaker/tools/: StringTools.cpp
